@@ -361,6 +361,34 @@ multisite_builtin_views.update({
           'sorters': [('svcdescr', False)],
           'linktitle': _('Services'),
           'title': _('Services of Host')},
+ 'host_export': {'browser_reload': 30,
+          'column_headers': 'pergroup',
+          'datasource': 'services',
+          'description': 'All services of a given host. The host and site must be set via HTML variables.',
+          'group_painters': [('host_with_state', 'hoststatus')],
+          'hard_filters': [],
+          'hard_filtervars': [('st0', 'on'),
+                              ('st1', 'on'),
+                              ('st2', 'on'),
+                              ('st3', 'on'),
+                              ('stp', 'on')],
+          'hidden': True,
+          'hide_filters': ['site', 'host'],
+          'icon': 'services',
+          'layout': 'boxed',
+          'mustsearch': False,
+          'num_columns': 1,
+          'painters': [('service_state', None),
+                       ('service_description', 'service'),
+                       ('svc_plugin_output', None),
+                       ('svc_perf_data', None),
+                       ('svc_check_command', None)],
+          'play_sounds': False,
+          'public': True,
+          'show_filters': ['svcstate', 'serviceregex'],
+          'sorters': [('svcdescr', False)],
+          'linktitle': _('Services'),
+          'title': _('Services of Host')},
 'hosts': {'browser_reload': 30,
            'column_headers': 'off',
            'datasource': 'services',
